[project]
name = "aoc-py"
version = "0.0.1"
authors = [
  { name="Ken Smith" },
]
description = "Python solutions to Advent of Code challenges"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "pipe>=2.0",
    "more-itertools>=10.1.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.pdm.scripts]
test = "pytest"